tests/ui/imports/issue-85992.stderr
error[E0432]: unresolved import `crate::issue_85992_extern_2`
  --> $DIR/issue-85992.rs:8:5
   |
LL | use crate::issue_85992_extern_2;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `issue_85992_extern_2` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
